--- a/home.html
+++ b/home.html
@@ -28,9 +28,8 @@
             <div class="panel panel-info homeContainer">
                   <div class="panel-heading"><img src="logo/QGate_logo.png" class="pull-left"><h3>Welcome!</h3></div>
                   <div class="panel-body">
-                        <p>This is a <ins>second</ins> <strong>DEMO</strong> of a basic Cloud Portal.</p>
-                        <p>This page was made for <strong>fun</strong>, and to show some JavaScript skills.</p>
-                        <p>This version is vary from the first one in design to show changes.</p>
+                        <p>This is a <strong>DEMO</strong> of a basic Cloud Portal.</p>
+
                   </div>
             </div>
 
